# cmake-project-demo

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cc
src/module1/: CMakeLists.txt  demo.cc
src/module2/: CMakeLists.txt  demo.cc
test/: CMakeLists.txt
test/module1/: CMakeLists.txt  test.cc
test/module2/: CMakeLists.txt  test.cc
